--- a/Module1/7-LapTrinhHuongDoiTuong/BaiTap/4-PhatTrienGameLaiXe.html
+++ b/Module1/7-LapTrinhHuongDoiTuong/BaiTap/4-PhatTrienGameLaiXe.html
@@ -7,8 +7,9 @@
 <body>
 <h2 style="position: absolute ; left: 320px; top: 0 ;color: #e20606">Car Game</h2>
 <canvas id="carGame" height="240px" width="720px"
-        style="border:5px solid #40b21d ;position: absolute ;top: 50px"></canvas>
-<h2>SCORE:</h2> <h2 style="position: absolute ; top: 0;left: 110px" id="diem"></h2>
+        style="border:5px solid #40b21d;position:absolute;top: 50px"></canvas>
+<h2>SCORE:</h2>
+<h2 style="position: absolute ; top: 0;left: 110px" id="diem"></h2>
 <script>
     let gameCreep = function () {
         this.beginCreep = function (crepy, crepx) {
@@ -17,16 +18,13 @@
             this.img1 = new Image();
             this.img1.src = "https://www.vippng.com/png/detail/50-503550_police-car-top-blue-png-image-police-car.png";
             this.drawcreep = document.getElementById("carGame").getContext("2d");
+
             this.drawcreep.drawImage(this.img1, this.creepX, this.creepY, 140, 90);
         }
     }
     let gameCar = function () {
         this.speed = 7;
         this.paintBegin = function () {
-            this.paintCar(500, 80);
-        }
-        this.paintEnd = function () {
-            this.drawcar.clearRect(0, 0, 720, 240);
             this.paintCar(500, 80);
         }
         this.paintCar = function (carleft, carright) {
@@ -61,8 +59,10 @@
         }
     };
     let gamestart = new gameCar();
+    gamestart.paintBegin();
+    docReady();
     let crepy;
-    let diem =0;
+    let diem = 0;
     document.getElementById("diem").innerHTML = diem;
     switch (Math.floor(Math.random() * 2) + 1) {
         case 1:
@@ -76,9 +76,7 @@
     let crepx = -150;
     let Creep = new gameCreep();
     setInterval(function () {
-
-            crepx+=2;
-
+        crepx++;
         if (crepx > 720) {
             diem++;
             document.getElementById("diem").innerHTML = diem;
@@ -96,27 +94,24 @@
             Creep.beginCreep(crepy, crepx);
             if (gamestart.carX < 5 || gamestart.carX > 610 || gamestart.carY < 0 || gamestart.carY > 170) {
                 alert("ban da thua cuoc");
-                gamestart.paintEnd();
+                crepx = -150;
                 location.reload();
             }
-            if (crepy === 10 ){
-                if (crepx+120===gamestart.carX && gamestart.carY < 87){
+            if (crepy === 10) {
+                if (((crepx < gamestart.carX && gamestart.carX < crepx + 120) || (crepx < gamestart.carX + 100 && gamestart.carX + 100 < crepx + 120)) && gamestart.carY < 87) {
                     alert("ban da thua cuoc");
-                    gamestart.paintEnd();
+                    crepx = -150;
                     location.reload();
                 }
-            }
-           else if (crepy === 120 ){
-                if (crepx+120===gamestart.carX && gamestart.carY > 52){
+            } else if (crepy === 120) {
+                if (((crepx < gamestart.carX && gamestart.carX < crepx + 120) || (crepx < gamestart.carX + 100 && gamestart.carX + 100 < crepx + 120)) && gamestart.carY > 52) {
                     alert("ban da thua cuoc");
-                    gamestart.paintEnd();
+                    crepx = -150;
                     location.reload();
                 }
             }
         }
-    }, 10);
-    gamestart.paintBegin();
-    docReady();
+    }, 1);
     function moveSelection(evt) {
         switch (evt.keyCode) {
             case 37:
