--- a/Module1/8-LapTrinhHuongDoiTuong2/BaiTap/2-AdamVaEva.html
+++ b/Module1/8-LapTrinhHuongDoiTuong2/BaiTap/2-AdamVaEva.html
@@ -19,6 +19,9 @@
         decrease() {
             let appWe = this.getWeight();
             this.appleWeight--;
+            if (this.appleWeight<0){
+                this.empty();
+            }
             return this.appleWeight;
         }
 
@@ -26,7 +29,6 @@
             this.appleWeight = 0;
         }
     }
-
     class Human {
         constructor(name, gender, weight) {
             this.name = name;
@@ -34,27 +36,22 @@
             this.weight = weight;
 
         }
-
         humanTalk() {
             console.log("Hello, My name is " + this.name + ". I'm a " + this.gender + " and I weight " + this.weight + " kg.");
         }
-
         humanEat(appleWeight) {
             this.appleWeight = appleWeight;
-            if (this.appleWeight > 0) {
+            if (this.appleWeight >= 0) {
                 this.weight++;
             }
         }
-
         humanGetValueApple(appleWeight) {
             this.appleWeight = appleWeight;
             return this.appleWeight;
         }
-
         getName() {
             return this.name;
         }
-
         getGender() {
             return this.gender;
         }
@@ -66,11 +63,12 @@
     let apple = new Apple();
     let Adam = new Human("Adam", "Man", 50);
     let Eva = new Human("Eva", "Woman", 35);
-    for (; apple.appleWeight > 0; console.log("kg tao': " + apple.appleWeight)) {
+    while( apple.appleWeight > 0){
         Adam.humanEat(apple.decrease());
         Eva.humanEat(apple.decrease());
         console.log("kg adam: " + Adam.getWeight());
         console.log("kg eva: " + Eva.getWeight());
+        console.log("kg tao': " + apple.appleWeight);
     }
 </script>
 </body>
