add xulychuoi thuattoan

--- a/Module1/8-LapTrinhHuongDoiTuong2/BaiTap/1-GameDonGian-DiChuyenDoiTuong.html
+++ b/Module1/8-LapTrinhHuongDoiTuong2/BaiTap/1-GameDonGian-DiChuyenDoiTuong.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Di chuyen doi tuong</title>
 </head>
-<canvas id="superman" width="1346" height="500"/>
+<canvas id="superman" width="1346" height="600"></canvas>
 <body>
 <script>
     class hero {
@@ -14,70 +14,61 @@
             this.speedHero = 1;
         }
 
-        paintHeroBegin() {
+        paintHero() {
             this.heroImg = new Image();
             this.heroImg.src = 'https://lazi.vn/files/large/3e2756f9498b72e';
             this.drawhero = document.getElementById("superman").getContext("2d");
             this.drawhero.drawImage(this.heroImg, this.cordX, this.cordY, 200, 200);
         }
 
-        paintHero() {
-
-            this.drawhero1 = document.getElementById("superman").getContext("2d");
-            this.drawhero1.drawImage(this.heroImg1, this.cordX, this.cordY, 200, 200);
-        }
-
         goLeft() {
-            this.heroImg1 = new Image();
-            this.heroImg1.src = 'https://lazi.vn/files/large/3e2756f9498b72e';
             this.cordX += this.speedHero;
             this.paintHero();
         }
 
         goRight() {
-            this.heroImg1 = new Image();
-            this.heroImg1.src = 'https://lazi.vn/files/large/3e2756f9498b72e';
             this.cordX -= this.speedHero;
+            this.paintHero();
+        }
+
+        goDown() {
+            this.cordY += this.speedHero;
+            this.paintHero();
+        }
+
+        goUp() {
+            this.cordY -= this.speedHero;
             this.paintHero();
         }
     }
 
-    let superman = new hero(150, 150);
-    superman.paintHeroBegin();
+    let superman = new hero(0, 0);
+    superman.paintHero();
 
     let count = 0;
     setInterval(function () {
-        docReady();
-        if (superman.cordX > 100 && count % 2 === 0) {
+
+        if ((superman.cordX >= 0 && superman.cordX < 1146) && count % 2 === 0) {
             superman.drawhero.clearRect(superman.cordX, superman.cordY, 210, 210);
             superman.goLeft();
-            if (superman.cordX > 1146) {
+
+        } else if (superman.cordX === 1146 && count % 2 === 0) {
+            superman.drawhero.clearRect(superman.cordX, superman.cordY, 210, 210);
+            superman.goDown();
+            if (superman.cordY >= 400) {
                 count++;
             }
-
-        } else {
+        } else if (superman.cordY === 400 && superman.cordX > 0 && count % 2 !== 0) {
             superman.drawhero.clearRect(superman.cordX, superman.cordY, 210, 210);
             superman.goRight();
-            if (superman.cordX < 150) {
-                count++;
+        } else if (superman.cordX === 0 && count % 2 !== 0) {
+            superman.drawhero.clearRect(superman.cordX, superman.cordY, 210, 210);
+            superman.goUp();
+            if (superman.cordY <= 0) {
+                count++
             }
         }
     }, 1);
-    function moveSelection(evt) {
-        switch (evt.keyCode) {
-            case 38:
-                superman.speedHero += 1;
-                break;
-            case 40:
-                superman.speedHero -= 1;
-                break;
-        }
-    }
-
-    function docReady() {
-        window.addEventListener('keydown', moveSelection);
-    }
-
 </script>
 </body>
 </html>
