--- a/Module1/10-GiaiQuyetVanDeVaThuatToan/BaiTap/1-GameDoanSo.html
+++ b/Module1/10-GiaiQuyetVanDeVaThuatToan/BaiTap/1-GameDoanSo.html
@@ -6,19 +6,23 @@
 </head>
 <body>
 <script>
-    let arr = new Array(100)
+    let arr = new Array(1000000);
     for (let i = 0; i < arr.length; i++) {
         arr[i] = i;
     }
     let tt = 0;
-    tt = tuyentinh(arr, 21);
+    let dem=0;
+    let dem2=0;
+    tt = tuyentinh(arr, 907556);
     let np = 0;
-    np = nhiphan(arr, 21);
+    np = nhiphan(arr, 907556);
     console.log(tt);
-    console.log(np);
+   console.log(np);
     function tuyentinh(arr, n) {
         for (let i = 0; i < arr.length; i++) {
+            dem++;
             if (n === arr[i]) {
+                console.log("time tuyen tinh: "+dem);
                 return i;
             }
         }
@@ -31,10 +35,13 @@
         while (left <= right) {
             let mid = parseInt((left + right) / 2);
             if (arr[mid] === n) {
+                console.log("time nhi phan: "+dem2);
                 return mid;
             } else if (n < arr[mid]) {
+                dem2++;
                 right = mid - 1;
             } else if (n > arr[mid]) {
+                dem2++;
                 left = mid + 1;
             }
         }
