--- a/Module1/CaseStudy/4-YeuCau4/YeuCau4.html
+++ b/Module1/CaseStudy/4-YeuCau4/YeuCau4.html
@@ -7,13 +7,13 @@
 <body>
 <script>
     let choose;
-    let arrNameCustomers = new Array();
+    let arrNameCustomers = new Array(0);
     let numCustomer;
     let nameDelete;
     while (1) {
         choose = parseInt(prompt("1.Add name customer \n" +
             "2.Delete customer"));
-        if (choose == 1) {
+        if (choose === 1) {
             numCustomer = parseInt(prompt("Hay nhap so luong khach hang muon them"));
             for (let i = 0; i < numCustomer; i++) {
                 arrNameCustomers[i] = prompt("Nhap khach hang thu " + (i + 1));
@@ -23,15 +23,15 @@
             for (let j = 0; j < arrNameCustomers.length; j++) {
                 arrTemp[j] = (j + 1) + "." + arrNameCustomers[j];
             }
-            alert(arrTemp.join("\n"));
-            let arrSort = new Array();
+            alert("danh sach chua sap xe: \n"+arrTemp.join("\n"));
+            let arrSort = new Array(0);
             arrSort = arrNameCustomers.sort();
             for (let x = 0; x < arrSort.length; x++) {
                 arrTemp[x] = (x + 1) + "." + arrSort[x];
             }
-            alert(arrTemp.join("\n"));
+            alert("danh sach da sap xe: \n"+arrTemp.join("\n"));
 
-        } else if (choose == 2) {
+        } else if (choose === 2) {
             nameDelete = prompt("Nhap vao ten khach hang muon xoa");
             if (arrNameCustomers.indexOf(nameDelete) >= 0) {
                 for (let i = arrNameCustomers.indexOf(nameDelete); i < arrNameCustomers.length; i++) {
@@ -43,7 +43,7 @@
                     arrTemp[j] = (j + 1) + "." + arrNameCustomers[j];
                 }
                 alert(arrTemp.join("\n"));
-            } else if (arrNameCustomers.indexOf(nameDelete) == -1) {
+            } else if (arrNameCustomers.indexOf(nameDelete) === -1) {
                 alert("Ten khach hang ban nhap khong co trong danh sach");
             }
         }
