--- a/Module1/CaseStudy/6-YeuCau6/YeuCau6_huongdoituong.html
+++ b/Module1/CaseStudy/6-YeuCau6/YeuCau6_huongdoituong.html
@@ -124,7 +124,6 @@
         }
 
         getpaymoney() {
-
             this.paymoney = this.getcostservice() * this.getrentday() * (1 - this.getdiscount() / 100);
             return this.paymoney;
         }
@@ -214,8 +213,8 @@
         }
     }
 
-    let ListCustomer = new Array();
-    let ListEmployee = new Array();
+    let ListCustomer = new Array(0);
+    let ListEmployee = new Array(0);
     let choose_MainMenu;
     displayMainMenu();
 
@@ -274,12 +273,11 @@
     }
 
     function displayInformationCustomer() {
-        let arrName_ID = new Array();
+        let arrName_ID = new Array(0);
         let i;
         for (i = 0; i < ListCustomer.length; i++) {
             arrName_ID[i] = (i + 1) + "." + "Name: " + ListCustomer[i].getname() + " CMND: " + ListCustomer[i].getid();
         }
-
         let chose_display = parseInt(prompt(arrName_ID.join("\n") + "\n" + (i + 1) + ".Back"));
         if (chose_display === ListCustomer.length + 1) {
             displayMainMenu();
@@ -304,7 +302,7 @@
     }
 
     function editInformationCustomer() {
-        let arrName_ID = new Array();
+        let arrName_ID = new Array(0);
         let i;
         for (i = 0; i < ListCustomer.length; i++) {
             arrName_ID[i] = (i + 1) + "." + "Name: " + ListCustomer[i].getname() + " CMND: " + ListCustomer[i].getid();
@@ -386,7 +384,7 @@
     }
 
     function displayTotalPayOfCustomer() {
-        let arrName_ID = new Array();
+        let arrName_ID = new Array(0);
         let i;
         for (i = 0; i < ListCustomer.length; i++) {
             arrName_ID[i] = (i + 1) + "." + "Name: " + ListCustomer[i].getname() + " CMND: " + ListCustomer[i].getid();
@@ -405,7 +403,7 @@
     }
 
     function deleteCustomer() {
-        let arrName_ID = new Array();
+        let arrName_ID = new Array(0);
         let i;
         for (i = 0; i < ListCustomer.length; i++) {
             arrName_ID[i] = (i + 1) + "." + "Name: " + ListCustomer[i].getname() + " CMND: " + ListCustomer[i].getid();
@@ -416,7 +414,7 @@
         } else if (chose_delete < ListCustomer.length + 1 && chose_delete > 0) {
             let index = chose_delete - 1;
             ListCustomer.splice(index, 1);
-            let arrnameid = new Array();
+            let arrnameid = new Array(0);
             for (i = 0; i < ListCustomer.length; i++) {
                 arrnameid[i] = (i + 1) + "." + "Name: " + ListCustomer[i].getname() + " CMND: " + ListCustomer[i].getid();
             }
@@ -458,18 +456,18 @@
     function addid() {
         let id, cmnd = true;
         do {
-            id = prompt("So CMND(gom 9 so nguyen duong): ");
-            if (id.trim().length === 9) {
-                if (isNaN(id.trim()) === false) {
-                    if (Number.isInteger(parseInt(id.trim())) === true) {
-                        if (Number(id.trim()) >= 100000000 && Number(id.trim()) <= 999999999) {
+            id = prompt("So CMND(gom 9 so nguyen duong): ").trim();
+            if (id.length === 9) {
+                if (!isNaN(id)) {
+                    if (Number.isInteger(parseInt(id))) {
+                        if (Number(id) >= 100000000 && Number(id) <= 999999999) {
                             cmnd = false;
                             return id;
                         }
                     }
                 }
             }
-            if (cmnd === true) {
+            if (cmnd) {
                 alert("Ban da nhap sai. Vui long nhap lai");
             }
         } while (cmnd);
@@ -487,7 +485,7 @@
                 year = birthday.substring(6, 10);
                 if (birthday.length === 10) {
                     if ((birthday.substring(2, 3) === "/") && (birthday.substring(5, 6) === "/")) {
-                        if (isNaN(day) === false && isNaN(month) === false && isNaN(year) === false) {
+                        if (!isNaN(day) && !isNaN(month) && !isNaN(year)) {
                             if (Number.isInteger(parseInt(day)) && Number.isInteger(parseInt(month)) && Number.isInteger(parseInt(year))) {
                                 if ((day > 0 && day < 32) && (month > 0 && month < 13) && (year > 1000 && year < 2021)) {
                                     sinhnhat = false;
@@ -498,7 +496,7 @@
                     }
                 }
             }
-            if (sinhnhat === true) {
+            if (sinhnhat) {
                 alert("Ban da nhap sai. Vui long nhap lai");
             }
         } while (sinhnhat);
@@ -513,7 +511,7 @@
                 thu = false;
                 return email;
             }
-            if (thu === true) {
+            if (thu) {
                 alert("Ban da nhap sai. Vui long nhap lai");
             }
         } while (thu);
@@ -539,7 +537,7 @@
             if (temp !== "") {
                 diachi = false;
             }
-            if (diachi === true) {
+            if (diachi) {
                 alert("Ban da nhap sai. Vui long nhap lai");
             }
             return temp;
@@ -550,12 +548,12 @@
     function addtypecustomer() {
         let loaikhachhang = true, kindCustomer;
         do {
-            kindCustomer = prompt("Loai khach hang (Diamond, Platinum, Gold, Silver, Member): ");
-            if (kindCustomer.trim() === "Diamond" || kindCustomer.trim() === "Platinum" || kindCustomer.trim() === "Gold" || kindCustomer.trim() === "Silver" || kindCustomer.trim() === "Member") {
+            kindCustomer = prompt("Loai khach hang (Diamond, Platinum, Gold, Silver, Member): ").trim();
+            if (kindCustomer === "Diamond" || kindCustomer === "Platinum" || kindCustomer === "Gold" || kindCustomer === "Silver" || kindCustomer === "Member") {
                 loaikhachhang = false;
                 return kindCustomer;
             }
-            if (loaikhachhang === true) {
+            if (loaikhachhang) {
                 alert("Ban da nhap sai. Vui long nhap lai");
             }
 
@@ -565,16 +563,16 @@
     function adddiscount() {
         let giamgia = true, discount;
         do {
-            discount = prompt("Giam gia(vd:1,5): ");
-            if (isNaN(discount.trim()) === false) {
-                if (Number.isInteger(parseInt(discount.trim())) === true) {
-                    if (discount.trim() >= 0) {
+            discount = prompt("Giam gia(vd:1,5): ").trim();
+            if (!isNaN(discount)) {
+                if (Number.isInteger(parseInt(discount))) {
+                    if (discount >= 0) {
                         giamgia = false;
                         return discount;
                     }
                 }
             }
-            if (giamgia === true) {
+            if (giamgia) {
                 alert("Ban da nhap sai. Vui long nhap lai");
             }
         } while (giamgia);
@@ -583,16 +581,16 @@
     function addnumberofaccompany() {
         let numpeople = true, soluongdikem;
         do {
-            soluongdikem = prompt("So luong nguoi di kem: ");
-            if (isNaN(soluongdikem.trim()) === false) {
-                if (Number.isInteger(parseInt(soluongdikem.trim())) === true) {
-                    if (soluongdikem.trim() >= 0) {
+            soluongdikem = prompt("So luong nguoi di kem: ").trim();
+            if (!isNaN(soluongdikem)) {
+                if (Number.isInteger(parseInt(soluongdikem))) {
+                    if (soluongdikem >= 0) {
                         numpeople = false;
                         return soluongdikem;
                     }
                 }
             }
-            if (numpeople === true) {
+            if (numpeople) {
                 alert("Ban da nhap sai. Vui long nhap lai");
             }
         } while (numpeople);
@@ -601,16 +599,16 @@
     function addrentday() {
         let ngaythue = true, rentDay;
         do {
-            rentDay = prompt("So ngay thue: ");
-            if (isNaN(rentDay.trim()) === false) {
-                if (Number.isInteger(parseInt(rentDay.trim())) === true) {
-                    if (rentDay.trim() > 0) {
+            rentDay = prompt("So ngay thue: ").trim();
+            if (!isNaN(rentDay)) {
+                if (Number.isInteger(parseInt(rentDay))) {
+                    if (rentDay > 0) {
                         ngaythue = false;
                         return rentDay;
                     }
                 }
             }
-            if (ngaythue === true) {
+            if (ngaythue) {
                 alert("Ban da nhap sai. Vui long nhap lai");
             }
         } while (ngaythue);
@@ -619,12 +617,12 @@
     function addtypeservice() {
         let loaidichvu = true, kindService;
         do {
-            kindService = prompt("Loai dich vu (Villa, House, Room): ");
-            if (kindService.trim() === "Villa" || kindService.trim() === "House" || kindService.trim() === "Room") {
+            kindService = prompt("Loai dich vu (Villa, House, Room): ").trim();
+            if (kindService === "Villa" || kindService === "House" || kindService === "Room") {
                 loaidichvu = false;
                 return kindService;
             }
-            if (loaidichvu === true) {
+            if (loaidichvu) {
                 alert("Ban da nhap sai. Vui long nhap lai");
             }
 
@@ -634,12 +632,12 @@
     function addtyperoom() {
         let loaiphongthue = true, kindRoom;
         do {
-            kindRoom = prompt("Loai phong thue (Vip, Business,  Normal): ");
-            if (kindRoom.trim() === "Vip" || kindRoom.trim() === "Business" || kindRoom.trim() === "Normal") {
+            kindRoom = prompt("Loai phong thue (Vip, Business,  Normal): ").trim();
+            if (kindRoom === "Vip" || kindRoom === "Business" || kindRoom === "Normal") {
                 loaiphongthue = false;
                 return kindRoom;
             }
-            if (loaiphongthue === true) {
+            if (loaiphongthue) {
                 alert("Ban da nhap sai. Vui long nhap lai");
             }
         } while (loaiphongthue);
@@ -656,7 +654,7 @@
     }
 
     function displayInformationEmployee() {
-        let arrName_ID = new Array();
+        let arrName_ID = new Array(0);
         let i;
         for (i = 0; i < ListEmployee.length; i++) {
             arrName_ID[i] = (i + 1) + "." + "Name: " + ListEmployee[i].getname() + " CMND: " + ListEmployee[i].getid();
@@ -681,7 +679,7 @@
     }
 
     function salaryOfEmployee() {
-        let arrName_ID = new Array();
+        let arrName_ID = new Array(0);
         let i;
         for (i = 0; i < ListEmployee.length; i++) {
             arrName_ID[i] = (i + 1) + "." + "Name: " + ListEmployee[i].getname() + " CMND: " + ListEmployee[i].getid();
@@ -714,7 +712,7 @@
     function addlevel() {
         let trinhdo = true;
         do {
-            let level = prompt("Enter level(Intermediate,Colleges,University,After University)");
+            let level = prompt("Enter level(Intermediate,Colleges,University,After University)").trim();
             if (level === "Intermediate" || level === "Colleges" || level === "University" || level === "After University") {
                 trinhdo = false;
                 return level;
@@ -725,7 +723,7 @@
     function addposition() {
         let vitri = true;
         do {
-            let position = prompt("Enter your position(Sale,Marketing,Official,Staff,Manager)");
+            let position = prompt("Enter your position(Sale,Marketing,Official,Staff,Manager)").trim();
             if (position === "Sale" || position === "Staff" || position === "Marketing" ||
                 position === "Official" || position === "Manager") {
                 vitri = false;
